# Test68K

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  binary-format.txt  build.zig  build.zig.zon  pyproject.toml
cmake/: base.cmake  warnings.cmake
src/: Cpu.zig  binaryscribber.py  main.py  main.zig  wrapper.py
src/moira/: wrapper.cpp  wrapper.h
src/wrapper/: m68kconf.h  types.h  wrapper.c  wrapper.h
